cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/aut_init.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/aut_init.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ------------------------------------------------
  (1/1) Component has an initialization predicate.
  ------------------------------------------------
   * In automaton "g.h":
     - initial true;
               ^
